--- a/Penguin .Rmd
+++ b/Penguin .Rmd
@@ -42,3 +42,58 @@ color = "Penguin species",
 shape = "Penguin species") +
 theme_minimal()
 ```
+
+
+```{r prompt 1}
+#Prompt 1
+class(penguins$bill_length_mm)
+class(penguins$flipper_length_mm)
+class(penguins$sex)
+class(penguins$body_mass_g)
+class(penguins$species)
+class(penguins$island)
+class(penguins$bill_depth_mm)
+
+levels(penguins$bill_length_mm)
+levels(penguins$flipper_length_mm)
+levels(penguins$sex)
+levels(penguins$body_mass_g)
+levels(penguins$species)
+levels(penguins$island)
+levels(penguins$bill_depth_mm)
+
+```
+
+```{r prompt 2}
+#Bar graph counts > colorblind palettes
+penguins %>%
+  count(species) %>%
+  ggplot() + geom_col(aes(x = species, y = n,fill = species)) + geom_label(aes(x= species, y= n, label =n)) + scale_fill_manual(values=c("#009E73" , "#CC79A7" , "gray")) + theme_minimal() +labs(title= 'Penguins Species Count')
+```
+
+
+```{r prompt 3}
+summary(penguins$species)
+summary(penguins$bill_length_mm)
+summary (penguins$body_mass_g)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
